Fix overflow scrolling problems

--- a/css/layout.css
+++ b/css/layout.css
@@ -18,6 +18,7 @@ layout-hbox, layout-vbox {
 
 
 layout-cell {
+    position: relative;
     flex-shrink: 0;
     box-sizing: border-box;
 }
