--- a/css/widget.css
+++ b/css/widget.css
@@ -15,6 +15,20 @@ widget-text-button[default_hidden]:hover, widget-tree-expand-button[default_hidd
 }
 
 
+layout-cell[grow] > widget-list, layout-cell[grow] > widget-tab-bar, layout-cell[grow] > widget-table-view {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+}
+
+
+widget-list, widget-tab-bar, widget-table-view {
+    overflow-y: auto;
+}
+
+
 widget-tab {
     text-align: center;
     cursor: pointer;
